--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Lois Orosa"
 title_separator          : "-"
 name                     : &name "Lois Orosa"
 description              : &description "Postdocf.gx  in Computer Architecture"
-url                      : loisorosa.github.io # http://127.0.0.1:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://loisorosa.github.io # http://127.0.0.1:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your sitg;'.;.'xhd.;'le, e.g. "/blog"
 repository               : "loisorosa/loisorosa.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
