--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Lois Orosa"
   avatar           : "Lois_Orosa.png"
   bio              : "Director @ Galicia Supercommputing Center (CESGA)"
-  location         : "Zürich"
+  location         : "Santiago de Compostela"
   employer         :
   pubmed           :
   orcid            :
